Fix horizontal scroll problem

--- a/screen.css
+++ b/screen.css
@@ -110,7 +110,6 @@ p{
 /*section layout*/
 
 section {
-	width: 100%;
   padding-left:5.0em;
 	padding-right:5.0em;
   display: table;
